--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <header>
         <h1>PlaceHolder</h1>
-    </header>
-    <nav>
+   </header>
+   <nav>
         <ul>
-            <li><a href="google.com"> google</a></li>
-            <li><a href="MDN"> MDN</a></li>
-            <li><a href="W3schools"> W3schools</a></li>
+            <li><a href="https://www.google.com/?safe=active&ssui=on"> google</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/"> MDN</a></li>
+            <li><a href="https://www.w3schools.com/"> W3schools</a></li>
         </ul>
     </nav>
+<header>
+    <h2>Coding is awsome</h2>
+</header>
 </body>
 </html>
