--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 </head>
 <body>
-    <header>
-        <h1>PlaceHolder</h1>
-   </header>
+    <main>
+ <img src="https://via.placeholder.com/500x130" alt="placeholder">
    <nav>
-        <ul>
-            <li><a href="https://www.google.com/?safe=active&ssui=on"> google</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/"> MDN</a></li>
-            <li><a href="https://www.w3schools.com/"> W3schools</a></li>
-        </ul>
+       
+            <target><a href="https://www.google.com/?safe=active&ssui=on"> google</a></target>
+            <target><a href="https://developer.mozilla.org/en-US/"> MDN</a></target>
+            <target><a href="https://www.w3schools.com/"> W3schools</a></target>
+       
     </nav>
+</main>
 <header>
     <h2>Coding is awsome</h2>
 </header>
