--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <img src="https://via.placeholder.com/250x100" alt="placeholder">
+    <img  src="https://via.placeholder.com/250x100" alt="placeholder">
    <nav>
        
             <target><a href="https://www.google.com/?safe=active&ssui=on"> google</a></target>
@@ -27,7 +27,7 @@
       <h2>Hero img</h2>
     </div>
 </div>
-<section>
+<section id="section1">
   <dl>
       <dt>Programming lang of interest</dt>
       
